ecmascript/parser/tests/typescript-errors/tsc/statements/continueStatements/invalidDoWhileContinueStatements/input.ts.stderr
error: A 'continue' statement can only jump to a label of an enclosing iteration statement
 --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidDoWhileContinueStatements/input.ts:7:1
  |
7 | continue;
  | ^^^^^^^^^

error: Jump target cannot cross function boundary
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidDoWhileContinueStatements/input.ts:11:4
   |
11 | do continue TWO; while (true)
   |    ^^^^^^^^^^^^^

error: A 'continue' statement can only jump to a label of an enclosing iteration statement
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidDoWhileContinueStatements/input.ts:17:9
   |
17 |         continue TWO;
   |         ^^^^^^^^^^^^^

error: A 'continue' statement can only jump to a label of an enclosing iteration statement
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidDoWhileContinueStatements/input.ts:24:9
   |
24 |         continue THREE;
   |         ^^^^^^^^^^^^^^^

error: Jump target cannot cross function boundary
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidDoWhileContinueStatements/input.ts:30:5
   |
30 |     continue FIVE;
   |     ^^^^^^^^^^^^^^

error: Jump target cannot cross function boundary
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidDoWhileContinueStatements/input.ts:40:5
   |
40 |     continue NINE;
   |     ^^^^^^^^^^^^^^

